[package]
name = "prj_G19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }
quote = { version = "1.0", features = ["default"] }