[package]
name = "prj_G19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
syn= { version = "2.0", features = ["visit", "full", "clone-impls"]}
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rand = "0.8"
clap = { version = "4.5.18", features = ["derive"] }