[package]
name = "prj_G19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
syn= { version = "2.0", features = ["visit", "full", "clone-impls"]}
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rand = "0.8"
clap = { version = "4.5.18", features = ["derive"] }

genpdf = { version = "0.2.0", features = ["images"] }
once_cell = "1.20.2"
image = "0.25.5"
resvg = "0.44.0"
usvg = "0.44.0"
snafu = "0.8.5"
charts-rs = "0.3.19"
kaggle = "1.0.3"

[features]
images = []